--- a/lessons/extra/.extra_loops_and_scripts.md
+++ b/lessons/extra/.extra_loops_and_scripts.md
@@ -29,9 +29,9 @@ We are finally ready to see what makes the shell such a powerful programming env
 
 > If you have not already done so, login to Orchestra and start an interactive session using `bsub -Is -q interactive bash`.
 
-First move into `unix_workshop` and open a new file using `nano`:
+First move into `unix-intro` and open a new file using `nano`:
 
-	$ cd unix_workshop
+	$ cd unix-intro
 	$ nano listing.sh
 
 We will start our script with a shebang line: 
@@ -82,7 +82,7 @@ Well, in the former, we're setting the value, while in the latter, we're retriev
 
 Let's try another command using the variable that we have created. In the last lesson, we introduced the `wc -l` command which allows us to count the number of lines in a file. We can count the number of lines in `Mov10_oe_1.subset.fq` by referencing the `file` variable, but first move into the `raw_fastq` directory:
 
-	$ cd ~/unix_workshop/raw_fastq
+	$ cd ~/unix-intro/raw_fastq
 	$ wc -l $file
 
 Ok, so we know variables are like buckets, and so far we have seen that bucket filled with a single value. **Variables can store more than just a single value.** They can store multiple values and in this way can be useful to carry out many things at once. Let's create a new variable called `filenames` and this time we will store *all of the filenames* in the `raw_fastq` directory as values. 
@@ -143,7 +143,7 @@ Most simply, it writes to the terminal (`echo`) the name of the file and the num
 
 In this case the list of files is specified using the asterisk wildcard: `*.fq`, i.e. all files that end in `.fq`. Then, we execute 2 commands between the `do` and `done`. With a loop, we execute these commands for each file at a time. Once the commands are executed for one file, the loop then executes the same commands on the next file in the list. 
 
-Essentially, **the number of loops == the number of items in the list**, in our case that is 2 times since we have 2 files in `~/unix_workshop/raw_fastq` that end in `.fq`. This is done by changing the value of the `var` variable 2 times. 
+Essentially, **the number of loops == the number of items in the list**, in our case that is 2 times since we have 2 files in `~/unix-intro/raw_fastq` that end in `.fq`. This is done by changing the value of the `var` variable 2 times. 
 
 Of course, `var` is a useless variable name. But since it doesn't matter what variable name we use, we can make it something more intuitive.
 
@@ -166,11 +166,11 @@ Before we get started on creating more complex scripts, we want to introduce you
 	
 Then we will run the `basename` command on one of the FASTQ files. Be sure to specify the path to the file:
 
-	$ basename unix_workshop/raw_fastq/Mov10_oe_1.subset.fq
+	$ basename unix-intro/raw_fastq/Mov10_oe_1.subset.fq
 	
-What is returned to you? The filename was split into the path `unix_workshop/raw_fastq/` and the filename. The command returns only the filename. Now, suppose we wanted to also trim off the file extension (i.e. remove `.fq` leaving only the file *base name*). We can do this by adding a parameter to the command to specify what string of characters we want trimmed.
+What is returned to you? The filename was split into the path `unix-intro/raw_fastq/` and the filename. The command returns only the filename. Now, suppose we wanted to also trim off the file extension (i.e. remove `.fq` leaving only the file *base name*). We can do this by adding a parameter to the command to specify what string of characters we want trimmed.
 
-	$ basename unix_workshop/raw_fastq/Mov10_oe_1.subset.fq .fq
+	$ basename unix-intro/raw_fastq/Mov10_oe_1.subset.fq .fq
 	
 You should now see that only `Mov10_oe_1.subset` is returned. *How would you modify the command to only return to you `Mov10_oe_1`?*
 
@@ -187,10 +187,10 @@ Now that you've learned how to use loops and variables, let's put this processin
 
 You might not realize it, but this is something that you now know how to do. Let's get started...
 
-Rather than doing all of this in the terminal we are going to create a script file with all relevant commands. Move back in to `unix_workshop` and use `nano` to create our new script file:
+Rather than doing all of this in the terminal we are going to create a script file with all relevant commands. Move back in to `unix-intro` and use `nano` to create our new script file:
 
 ```bash
-$ cd unix_workshop
+$ cd unix-intro
 $ nano generate_bad_reads_summary.sh
 ```
 
@@ -203,7 +203,7 @@ After the shebang line, we enter the commands we want to execute. First we want 
 
 ``` bash
 # enter directory with raw FASTQs
-cd ~/unix_workshop/raw_fastq
+cd ~/unix-intro/raw_fastq
 ```
 
 And now we loop over all the FASTQs:
@@ -256,7 +256,7 @@ Save and exit `nano`, and voila! You now have a script you can use to assess the
 #!/bin/bash 
 
 # enter directory with raw FASTQs
-cd ~/unix_workshop/raw_fastq
+cd ~/unix-intro/raw_fastq
 
 # count bad reads for each FASTQ file in our directory
 for filename in *.fq 
@@ -285,7 +285,7 @@ To run this script, we simply enter the following command:
 	$ sh generate_bad_reads_summary.sh
 
 
-To keep your data organized, let's move all of the bad read files out of our `raw_fastq` directory into the directory `~/unix_workshop/other`.
+To keep your data organized, let's move all of the bad read files out of our `raw_fastq` directory into the directory `~/unix-intro/other`.
 
 
 	$ mv raw_fastq/*bad* other/
