--- a/lessons/extra/.extra_searching_files.md
+++ b/lessons/extra/.extra_searching_files.md
@@ -17,7 +17,7 @@ Let's give it a try!
 Suppose we want to see how many reads in our file are really bad, with 10 consecutive Ns  
 Let's search for the string NNNNNNNNNN in file 
 
-`$ cd ~/unix_workshop/raw_fastq`
+`$ cd ~/unix-intro/raw_fastq`
 
 `$ grep NNNNNNNNNN Mov10_oe_1.subset.fq`
 
@@ -119,7 +119,7 @@ learn to become proficient with the pipe and redirection operators:
 
 Finally, let's use the new tools in our kit and a few new ones to examine our gene annotation file, **chr1-hg19_genes.gtf**, which we will be using later to find the genomic coordinates of all known exons on chromosome 1.
 
-`$ cd ~/unix_workshop/reference_data/`
+`$ cd ~/unix-intro/reference_data/`
 
 Let's explore our `chr1-hg19_genes.gtf` file a bit. What information does it contain?
 
